Implementación del checkout y ajustes en los toast de clientes

--- a/POS-app/pos-cafecito-feliz/src/app/modules/clientes/lista-clientes/lista-clientes.component.html
+++ b/POS-app/pos-cafecito-feliz/src/app/modules/clientes/lista-clientes/lista-clientes.component.html
@@ -197,7 +197,8 @@
               class="form-control"
               [(ngModel)]="clienteForm.telefono"
               name="telefono"
-              placeholder="1234567890"
+              placeholder="Teléfono..."
+              maxlength="10"
             />
           </div>
         </form>
