correccion de sintaxis y eliminacion de console logs

--- a/POS-app/pos-cafecito-feliz/src/app/auth/login/login.component.css
+++ b/POS-app/pos-cafecito-feliz/src/app/auth/login/login.component.css
@@ -11,7 +11,7 @@
   color: #6f4e37;
 }
 .btn-coffee {
-  background-color: #866044; /* café clásico */
+  background-color: #866044; 
   border-color: #875f42;
   color: #fff;
 }
