--- a/POS-app/pos-cafecito-feliz/src/app/app.component.html
+++ b/POS-app/pos-cafecito-feliz/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar *ngIf="authService.isLoggedIn()"></app-navbar>
+@if (authService.isLoggedIn()) {
+  <app-navbar></app-navbar>
+}
 <router-outlet></router-outlet>
