--- a/POS-app/pos-cafecito-feliz/src/app/shared/navbar/navbar.component.css
+++ b/POS-app/pos-cafecito-feliz/src/app/shared/navbar/navbar.component.css
@@ -30,7 +30,7 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* Pestaña activa - efecto de carpeta */
+/* efecto de carpeta */
 .nav-tab.active {
   background-color: #495057;
   color: #fff !important;
@@ -40,7 +40,7 @@
   border-bottom: 3px solid #6c757d;
 }
 
-/* Línea inferior para simular apertura de pestaña */
+/* Línea inferior */
 .nav-tab.active::after {
   content: '';
   position: absolute;
